fix: update descriptions and placeholders for clarity; enhance CSS styles for consistency

--- a/src/article/tool/unicode-convert.html
+++ b/src/article/tool/unicode-convert.html
@@ -10,7 +10,7 @@ layout: "tool"
     id="input-text"
     rows="4"
     class="neumorphic-input"
-    placeholder="ここに入力してください"
+    placeholder="ここに入力"
   ></textarea>
   <button class="convert-button">変換する</button>
   <span class="text">Enterで変換　Shift+Enterで改行</span>
@@ -21,7 +21,7 @@ layout: "tool"
     id="input-unicode"
     rows="4"
     class="neumorphic-input"
-    placeholder="ここに入力してください"
+    placeholder="ここに入力"
   ></textarea>
   <button class="reverse-button">逆変換する</button>
   <span class="text">Enterで変換　Shift+Enterで改行</span>
@@ -32,7 +32,7 @@ layout: "tool"
     id="section-text"
     rows="4"
     class="neumorphic-input"
-    placeholder="ここに入力してください"
+    placeholder="ここに入力"
   ></textarea>
   <button class="convert-andbutton">変換する</button>
   <span class="text">Enterで変換　Shift+Enterで改行</span>
