fix: update base URL references and clean up CSS styles

--- a/src/article/tool/unicode-convert.html
+++ b/src/article/tool/unicode-convert.html
@@ -38,5 +38,5 @@ layout: "tool"
   <span class="text">　Enterで変換　Shift+Enterで改行</span>
   <div id="result" class="result"></div>
 
-  <script src="{{ baseUrl }}/js/unicode-convert.js"></script>
+  <script src="/js/unicode-convert.js"></script>
 </div>
