--- a/src/article/tool/lottery.html
+++ b/src/article/tool/lottery.html
@@ -31,4 +31,4 @@ layout: "tool"
   <div id="result" class="result"></div>
 </div>
 
-<script src="{{ baseUrl }}/js/lottery.js"></script>
+<script src="/js/lottery.js"></script>
