--- a/src/article/tool/unicode-convert.html
+++ b/src/article/tool/unicode-convert.html
@@ -13,7 +13,7 @@ layout: "tool"
     placeholder="ここに入力"
   ></textarea>
   <button class="convert-button">変換する</button>
-  <span class="text">　Enterで変換　Shift+Enterで改行</span>
+  <span class="mob-hide">　Enterで変換　Shift+Enterで改行</span>
   <div id="output" class="result"></div>
 
   <h2>逆変換</h2>
@@ -24,7 +24,7 @@ layout: "tool"
     placeholder="ここに入力"
   ></textarea>
   <button class="reverse-button">逆変換する</button>
-  <span class="text">　Enterで変換　Shift+Enterで改行</span>
+  <span class="mob-hide">　Enterで変換　Shift+Enterで改行</span>
   <div id="output-unicode" class="result"></div>
 
   <h2>§ to & Converter</h2>
@@ -35,7 +35,7 @@ layout: "tool"
     placeholder="ここに入力"
   ></textarea>
   <button class="convert-andbutton">変換する</button>
-  <span class="text">　Enterで変換　Shift+Enterで改行</span>
+  <span class="mob-hide">　Enterで変換　Shift+Enterで改行</span>
   <div id="result" class="result"></div>
 
   <script src="/js/unicode-convert.min.js"></script>
